<?xml version="1.0"?>
<package format="2">
  <name>test_package</name>
  <version>0.0.1</version>
  <description>The test_package package</description>

  <maintainer email="adrl@todo.todo">ADRL</maintainer>

  <license>BSD-2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ct_optcon</build_depend>
  <build_export_depend>ct_optcon</build_export_depend>
  <exec_depend>ct_optcon</exec_depend>

  <export>
  </export>
</package>
